# libjiezhu

./: .gitignore  AGENTS.md  CMakeLists.txt  README-zh.md  README.md  main.cpp  main.py
.github/workflows/: build-libraries.yml  release-packages.yml
jiezhu-cpp/: CMakeLists.txt  README.md
jiezhu-cpp/cmake/: jiezhuConfig.cmake.in
jiezhu-cpp/docs/: api.md  build.md  index.md  quickstart.md
jiezhu-cpp/inc/jie/: chat.hpp  jiezhu.hpp
jiezhu-cpp/src/: chat.cpp  jiezhu.cpp
jiezhu-cpp/tests/: test_chat_anthropic_curl.cpp  test_chat_create_curl.cpp  test_chat_curl.cpp  test_chat_errors_curl.cpp  test_chat_stream_curl.cpp  test_http_server.hpp
jiezhu-prompt/: prompt.md
jiezhu-py/: LICENSE  README.md  pyproject.toml
jiezhu-py/src/jiezhu/: __init__.py  hijack.py
jiezhu-py/tests/: conftest.py  test_claude_hijack.py  test_openai_hijack.py
