[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jiezhu"
version = "0.2.0"
description = "Hijack system prompt for OpenAI ChatCompletion and Anthropic API by prepending a configurable prefix with terminal confirmation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Not-A-DevStudio" }]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
claude = ["anthropic>=0.39.0"]
test = ["pytest>=7.0", "pytest-asyncio"]

[project.urls]
Repository = "https://github.com/Not-A-DevStudio/jiezhu.git"
Homepage = "https://Not-A-DevStudio.github.io/jiezhu"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
